--- a/public/assets/scss/layout.scss
+++ b/public/assets/scss/layout.scss
@@ -133,7 +133,7 @@ body {
   #menu {
     display                         : none;
     position                        : absolute;
-    bottom                          : 0;
+    bottom                          : 40px;
     height                          : 320px;
     width                           : 100px;
     background                      : rgba(0, 0, 0, 0.2);
